samples/_failures_safe/1761474651_eb887e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce0a7ed2.c: In function ‘main’:
./samples/SAFE/__tmp_ce0a7ed2.c:152:5: error: expected declaration or statement at end of input
  152 |     }
      |     ^
